# Trustlens

./: .env  .gitignore  CodewithAPI.py  Dockerfile  README.md  api.js  cloudbuild.yaml  docker-compose.yml  index.html  main.py  ml.py  ml_service.py  ml_service1.py  mlrequirements.txt  package.json  pyproject.toml  render.yaml  requirements.txt  test_all_features.py  test_bias.py  test_score.py  vite.config.js
Truefront/trustlens-frontend/: .env.example  Dockerfile  FILE_STRUCTURE.md  SYSTEM_CHECKLIST.md  nginx.conf  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
Truefront/trustlens-frontend/src/: main.tsx
Trustlens/: README.md
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  run.py  test_db.py  test_storage.py  test_supabse.py  test_tables.py
backend/app/: init.py  main.py
backend/docs/: api_contracts.md
backend/migrations/: env.py
backend/scripts/: __init__db.py  test_phase1.py
ml/: Dockerfile
python/: Complete.py  app.py  homestitch.py  requirementsendpoints.py  screen.py  screenstitch.py  users.json
python/python/: app.py  home.py  truthlens.db
src/: app.jsx
trustlens-frontend/: .env.example  .eslintrc.json  .gitignore  .stylelintrc.json  Dockerfile  cloudbuild.yaml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
trustlens-frontend/src/: App.tsx  main.tsx  vite-env.d.ts
trustlens-frontend/trustlens-frontend/: index.html  package-lock.json  package.json
(+143 files in other folders)
