[tool.poetry]
name = "trustlens"
version = "0.1.0"
description = "Trustlens backend"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.8.0"}
pydantic-settings = "^2.2.0"
httpx = "^0.27.2"
tenacity = "^8.3.0"
boto3 = "^1.34.0"
supabase = "^2.5.0"
prometheus-fastapi-instrumentator = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
